Visual improvements to index and login

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,13 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>IDK</title>
+        <title>DayRate</title>
         <link rel="stylesheet" href="/css/index.css">
     </head>
     <body>
-        <h1>Some text for the index</h1>
-        <button type="button" name="loginButton" onclick="location.href='/login'">Login</button>
+        <div class="mainDiv">
+            <h1 class="titleText">Welcome to DayRate</h1>
+            <button type="button" name="loginButton" onclick="location.href='/login'">Login</button>
+        </div>
     </body>
 </html>
