--- a/public/login.html
+++ b/public/login.html
@@ -12,8 +12,8 @@
             <h1>Login</h1>
             <input type="text" class="logInput" id="username" name="username", placeholder="username"><br>
             <input type="password" class="logInput" id="password" name="password" placeholder="password"><br>
-            <button class="logButtons" type="button" name="loginButton" id="loginButton">Login</button>
-            <button class="logButtons" type="button" name="registerButton" id="registerButton">Register</button>
+            <button class="logButtons" type="button" name="loginButton" id="loginButton">Login</button><br>
+            <a href="/register">Click here to register</a>
       </div>
     </body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
