--- a/public/register.html
+++ b/public/register.html
@@ -11,7 +11,8 @@
             <input type="text" class="logInput" id="username" name="username", placeholder="Username"><br>
             <input type="password" class="logInput" id="password" name="password" placeholder="Password"><br>
             <input type="password" class="logInput" id="password2" name="password2" placeholder="Confirm password"><br>
-            <button class="logButtons" type="button" name="registerButton" id="registerButton">Register</button>
+            <button class="logButtons" type="button" name="registerButton" id="registerButton">Register</button><br>
+            <a href="/login">Already have an account?</a>
         </div>
     </body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
