Allows for uploading of ratings

--- a/public/main.html
+++ b/public/main.html
@@ -25,6 +25,7 @@
                 <button class="scaleButtons" id="scaleButton9">9</button>
                 <button class="scaleButtons" id="scaleButton10">10</button>
             </div>
+            <button type="button" name="rateButton" id="rateButton">Rate</button>
         </div>
         <button type="button" name="logoutButton" onclick="logout()">Logout</button>
     </body>
