--- a/public/main.html
+++ b/public/main.html
@@ -13,7 +13,7 @@
             <button type="button" class="toggleButton" name="toggleButton" id="toggleButton"  onclick="toggleScale()">toggleScale</button>
         </div>
         <div class="rateDiv" id="rateDiv">
-            <h2>You have not rated today yet</h2>
+            <h2>Rate today</h2>
             <div class="scaleDiv">
                 <button class="scaleButtons" id="scaleButton1">1</button>
                 <button class="scaleButtons" id="scaleButton2">2</button>
@@ -29,9 +29,14 @@
             <button type="button" name="rateButton" id="rateButton">Rate</button>
         </div>
         <div class="rateDiv" id="isRatedDiv">
-            <h2 class="scoreText">You gave today a:</h2> <h2 class="scoreText" id="scoreText"></h2>
+            <h2 class="scoreText">You gave today a</h2> <h2 class="scoreText" id="scoreText"></h2>
         </div>
         <button type="button" name="logoutButton" onclick="logout()">Logout</button>
+        <div class="mainDiv">
+                <input type="date" name="dateGiver" id="dateGiver">
+                <button type="button" name="getRateButton" id="getRateButton">Retrieve</button>
+                <h2 id="dateRateText"></h2>
+        </div>
     </body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/main.js"></script>
