--- a/public/main.html
+++ b/public/main.html
@@ -6,6 +6,11 @@
         <link rel="stylesheet" href="/css/main.css", type="text/css">
     </head>
     <body onload="setTexts()">
+        <div class="nameDiv">
+        <button type="button" name="logoutButton" onclick="logout()">Logout</button>
+        <button type-"button" name="accountButton" onclick="location.href='/account'">Account</button>
+        </div>
+
         <div class="mainDiv">
             <h1>Welcome</h1> <h1 id="nameText"></h1>
             <h2>Todays date is:</h2>
@@ -31,7 +36,6 @@
         <div class="rateDiv" id="isRatedDiv">
             <h2 class="scoreText">You gave today a</h2> <h2 class="scoreText" id="scoreText"></h2>
         </div>
-        <button type="button" name="logoutButton" onclick="logout()">Logout</button>
         <div class="mainDiv">
                 <input type="date" name="dateGiver" id="dateGiver">
                 <button type="button" name="getRateButton" id="getRateButton">Retrieve</button>
