--- a/public/login.html
+++ b/public/login.html
@@ -4,10 +4,10 @@
         <meta charset="utf-8">
         <title>Login</title>
         <link rel="stylesheet" href="/css/login.css", type="text/css">
-
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
     <body>
-        <button type="button" name="homeButton" onclick="location.href='/'">Index</button>
+        <button type="button" name="homeButton" class="iconButton" onclick="location.href='/'"><i class="icon material-icons">home</i></button>
         <div class="loginDiv">
             <h1>Login</h1>
             <input type="text" class="logInput" id="username" name="username", placeholder="username"><br>
