--- a/public/main.html
+++ b/public/main.html
@@ -4,11 +4,12 @@
         <meta charset="utf-8">
         <title>Main</title>
         <link rel="stylesheet" href="/css/main.css", type="text/css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
     <body onload="setTexts()">
-        <div class="nameDiv">
-        <button type="button" name="logoutButton" onclick="logout()">Logout</button>
-        <button type-"button" name="accountButton" onclick="location.href='/account'">Account</button>
+        <div class="buttonDiv">
+        <button type="button" class="iconButton" name="logoutButton" onclick="logout()"><i class="icon material-icons">exit_to_app</i></button>
+        <button type-"button" class="iconButton" name="accountButton" onclick="location.href='/account'"><i class="icon material-icons">account_circle</i></button>
         </div>
 
         <div class="mainDiv">
