--- a/public/register.html
+++ b/public/register.html
@@ -4,8 +4,10 @@
         <meta charset="utf-8">
         <title>Register</title>
         <link rel="stylesheet" href="/css/register.css", type="text/css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
     <body>
+        <button type="button" name="homeButton" class="iconButton" onclick="location.href='/'"><i class="icon material-icons">home</i></button>
         <div class="registerDiv">
             <h1>Register</h1>
             <input type="text" class="logInput" id="username" name="username", placeholder="Username"><br>
