css unified to single file

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>DayRate</title>
-        <link rel="stylesheet" href="/css/index.css">
+        <link rel="stylesheet" href="/css/general.css", type="text/css">
     </head>
     <body>
-        <div class="mainDiv">
-            <h1 class="titleText">Welcome to DayRate</h1>
-            <button type="button" name="loginButton" onclick="location.href='/login'">Login</button>
+        <div class="centeredDiv">
+            <h1 class="titleText">Welcome to DayRate</h1><br>
+            <button type="button" class="generalButton" name="loginButton" onclick="location.href='/login'">Login</button>
         </div>
     </body>
 </html>
