--- a/public/main.html
+++ b/public/main.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Main</title>
-        <link rel="stylesheet" href="/css/main.css", type="text/css">
+        <link rel="stylesheet" href="/css/general.css", type="text/css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
     <body onload="setTexts()">
@@ -12,35 +12,39 @@
         <button type-"button" class="iconButton" name="accountButton" onclick="location.href='/account'"><i class="icon material-icons">account_circle</i></button>
         </div>
 
-        <div class="mainDiv">
+        <div class="centeredDiv">
             <h1>Welcome</h1> <h1 id="nameText"></h1>
             <h2>Todays date is:</h2>
             <h2 id="dateText"></h2>
-            <button type="button" class="toggleButton" name="toggleButton" id="toggleButton"  onclick="toggleScale()">toggleScale</button>
+            <button type="button" class="generalButton" name="toggleButton" id="toggleButton"  onclick="toggleScale()">toggleScale</button>
         </div>
-        <div class="rateDiv" id="rateDiv">
+        <div class="nestedDiv initHidden" id="rateDiv">
             <h2>Rate today</h2>
             <div class="scaleDiv">
-                <button class="scaleButtons" id="scaleButton1">1</button>
-                <button class="scaleButtons" id="scaleButton2">2</button>
-                <button class="scaleButtons" id="scaleButton3">3</button>
-                <button class="scaleButtons" id="scaleButton4">4</button>
-                <button class="scaleButtons" id="scaleButton5">5</button>
-                <button class="scaleButtons" id="scaleButton6">6</button>
-                <button class="scaleButtons" id="scaleButton7">7</button>
-                <button class="scaleButtons" id="scaleButton8">8</button>
-                <button class="scaleButtons" id="scaleButton9">9</button>
-                <button class="scaleButtons" id="scaleButton10">10</button>
+                <button class="scaleButtons roundButtons" id="scaleButton1">1</button>
+                <button class="scaleButtons roundButtons" id="scaleButton2">2</button>
+                <button class="scaleButtons roundButtons" id="scaleButton3">3</button>
+                <button class="scaleButtons roundButtons" id="scaleButton4">4</button>
+                <button class="scaleButtons roundButtons" id="scaleButton5">5</button>
+                <button class="scaleButtons roundButtons" id="scaleButton6">6</button>
+                <button class="scaleButtons roundButtons" id="scaleButton7">7</button>
+                <button class="scaleButtons roundButtons" id="scaleButton8">8</button>
+                <button class="scaleButtons roundButtons" id="scaleButton9">9</button>
+                <button class="scaleButtons roundButtons" id="scaleButton10">10</button>
             </div>
-            <button type="button" name="rateButton" id="rateButton">Rate</button>
+            <button type="button" class="generalButton" name="rateButton" id="rateButton">Rate</button>
         </div>
-        <div class="rateDiv" id="isRatedDiv">
+        <div class="nestedDiv initHidden" id="isRatedDiv">
             <h2 class="scoreText">You gave today a</h2> <h2 class="scoreText" id="scoreText"></h2>
         </div>
-        <div class="mainDiv">
+        <div class="centeredDiv">
                 <input type="date" name="dateGiver" id="dateGiver">
                 <button type="button" name="getRateButton" id="getRateButton">Retrieve</button>
                 <h2 id="dateRateText"></h2>
+        </div>
+        <div class="centeredDiv">
+            <button type="button" name="analysisButton" onclick="showAllInfo()">Analyze</button>
+            <h3 id="averageText">Average</h3>
         </div>
     </body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
