--- a/public/main.html
+++ b/public/main.html
@@ -8,8 +8,9 @@
     </head>
     <body onload="setTexts()">
         <div class="buttonDiv">
-        <button type="button" class="iconButton" name="logoutButton" onclick="logout()"><i class="icon material-icons">exit_to_app</i></button>
-        <button type-"button" class="iconButton" name="accountButton" onclick="location.href='/account'"><i class="icon material-icons">account_circle</i></button>
+            <button type-"button" class="iconButton" name="analysisButton" onclick="location.href='/analyze'"><i class="icon material-icons">assessment</i></button>
+            <button type-"button" class="iconButton" name="accountButton" onclick="location.href='/account'"><i class="icon material-icons">account_circle</i></button>
+            <button type="button" class="iconButton" name="logoutButton" onclick="logout()"><i class="icon material-icons">exit_to_app</i></button>
         </div>
 
         <div class="centeredDiv">
@@ -41,10 +42,6 @@
                 <input type="date" name="dateGiver" id="dateGiver">
                 <button type="button" name="getRateButton" id="getRateButton">Retrieve</button>
                 <h2 id="dateRateText"></h2>
-        </div>
-        <div class="centeredDiv">
-            <button type="button" name="analysisButton" onclick="showAllInfo()">Analyze</button>
-            <h3 id="averageText">Average</h3>
         </div>
     </body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
