--- a/public/analyze.html
+++ b/public/analyze.html
@@ -12,7 +12,10 @@
         <div class="centeredDiv">
             <h3>Numer of ratings: </h3><h3 id="amountText"></h3><br>
             <h3>Average rating: </h3><h3 id="averageText"></h3><br>
-            <svg id="barSvg" width="500" height="500"></svg>
+            <h3>Distribution of ratings:</h3><br>
+            <svg id="barSvg" width="550" height="500"></svg>
+            <h3>Boxplot:</h3><br>
+            <svg id="boxPlotSvg" width="550" height="250"></svg>
         </div>
     </body>
     <script src="js/analyze.js"></script>
