Importing and exporting of data

--- a/public/analyze.html
+++ b/public/analyze.html
@@ -16,6 +16,8 @@
             <svg id="barSvg" width="550" height="500"></svg>
             <h3>Boxplot:</h3><br>
             <svg id="boxPlotSvg" width="550" height="250"></svg>
+            <h3>Ratings over time:</h3>
+            <svg id='datePlotSvg' width='550' height='500'></svg>
         </div>
     </body>
     <script src="js/analyze.js"></script>
