--- a/public/account.html
+++ b/public/account.html
@@ -13,12 +13,24 @@
             <h3>Username:</h3><h3 id="usernameText"></h3><br>
             <h3>Email:</h3><h3 id="emailText"></h3><br>
             <h3>Password:</h3>
-            <button type="button" name="showChangePwButton" id="showChangePwButton" onclick="togglePwDiv()">Change password</button><br>
+            <button type="button" class='generalButton' name="showChangePwButton" id="showChangePwButton" onclick="togglePwDiv()">Change password</button><br>
             <div class="nestedDiv initHidden", id="passwordDiv">
                 <input type="password" class="logInput" name="oldPw" id="oldPw" placeholder="Old Password"><br>
                 <input type="password" class="logInput" name="newPw" id="newPw" placeholder="New Password"><br>
                 <input type="password" class="logInput" name="newPw2" id="newPw2" placeholder="New Password confirmation"><br>
                 <button type="button" name="sendPwChange" id="sendPwChange" onclick="changePw()">Change</button><br>
+            </div>
+            <h3>Ratings:</h3>
+            <button type="button" class='generalButton' name="showImportButton" id='showImportButton' onclick='toggleImportDiv()'>Import</button>
+            <button type="button" class='generalButton' name="showExportButton" id='showExportButton' onclick='toggleExportDiv()'>Export</button><br>
+            <div class='nestedDiv initHidden' id='importDiv'>
+                <form action='/importRatings' method='post' enctype="multipart/form-data">
+                <input type="file" class='fileButton' name="importFileButton" id='importFileButton' value="" accept=".csv">
+                <input type="submit">
+            </form>
+            </div>
+            <div class='nestedDiv initHidden' id='exportDiv'>
+                <button type="button" name="downloadRatingsButton" id="downloadRatingsButton" onclick="downloadRatings()">Download</button>
             </div>
             <h3>Delete Account</h3><br>
         </div>
