added date plot for ratings over time

--- a/public/register.html
+++ b/public/register.html
@@ -14,7 +14,7 @@
             <input type="text" class="logInput" id="username" name="username", placeholder="Username"><br>
             <input type="password" class="logInput" id="password" name="password" placeholder="Password"><br>
             <input type="password" class="logInput" id="password2" name="password2" placeholder="Confirm password"><br>
-            <button class="logButtons" type="button" name="registerButton" id="registerButton">Register</button><br>
+            <button class="generalButton" type="button" name="registerButton" id="registerButton">Register</button><br>
             <a href="/login">Already have an account?</a>
         </div>
     </body>
