Made average rating per weekday visualization

--- a/public/analyze.html
+++ b/public/analyze.html
@@ -18,6 +18,8 @@
             <svg id="boxPlotSvg" width="550" height="250"></svg>
             <h3>Ratings over time:</h3>
             <svg id='datePlotSvg' width='550' height='500'></svg>
+            <h3>Average per weekday:</h3><br>
+            <svg id="averageDaySvg" width="550" height="500"></svg>
         </div>
     </body>
     <script src="js/analyze.js"></script>
