--- a/public/analyze.html
+++ b/public/analyze.html
@@ -9,8 +9,8 @@
     </head>
     <body onload="initialAnalysis()">
         <button type="button" name="homeButton" class="iconButton" onclick="location.href='main'"><i class="icon material-icons">home</i></button>
-        <div class="centeredDiv">
-            <h3>Numer of ratings: </h3><h3 id="amountText"></h3><br>
+        <div class="centeredDiv boxedDiv">
+            <h3>Number of ratings: </h3><h3 id="amountText"></h3><br>
             <h3>Average rating: </h3><h3 id="averageText"></h3><br>
             <h3>Distribution of ratings:</h3><br>
             <svg id="barSvg" width="550" height="500"></svg>
