--- a/public/main.html
+++ b/public/main.html
@@ -18,8 +18,7 @@
             <h2>Todays date is:</h2>
             <h2 id="dateText"></h2>
             <button type="button" class="generalButton" name="toggleButton" id="toggleButton"  onclick="toggleScale()">toggleScale</button>
-        </div>
-        <div class="nestedDiv initHidden" id="rateDiv">
+        <div class="initHidden" id="rateDiv">
             <h2>Rate today</h2>
             <div class="scaleDiv">
                 <button class="scaleButtons roundButtons" id="scaleButton1">1</button>
@@ -35,12 +34,13 @@
             </div>
             <button type="button" class="generalButton" name="rateButton" id="rateButton">Rate</button>
         </div>
-        <div class="nestedDiv initHidden" id="isRatedDiv">
+        <div class="initHidden" id="isRatedDiv">
             <h2 class="scoreText">You gave today a</h2> <h2 class="scoreText" id="scoreText"></h2>
+        </div>
         </div>
         <div class="centeredDiv">
                 <input type="date" name="dateGiver" id="dateGiver">
-                <button type="button" name="getRateButton" id="getRateButton">Retrieve</button>
+                <button type="button" class="smallButton" name="getRateButton" id="getRateButton">Retrieve</button>
                 <h2 id="dateRateText"></h2>
         </div>
     </body>
