--- a/public/analyze.html
+++ b/public/analyze.html
@@ -10,8 +10,13 @@
     <body onload="initialAnalysis()">
         <button type="button" name="homeButton" class="iconButton" onclick="location.href='main'"><i class="icon material-icons">home</i></button>
         <div class="centeredDiv boxedDiv">
+            <h1>Analysis</h1>
             <h3>Number of ratings: </h3><h3 id="amountText"></h3><br>
             <h3>Average rating: </h3><h3 id="averageText"></h3><br>
+            <h3>Ratings</h3><br>
+            <div class='nestedDiv scrollDiv'>
+                <ul class="noPointsList" id="ratingsList"></ul>
+            </div>
             <h3>Distribution of ratings:</h3><br>
             <svg id="barSvg" width="550" height="500"></svg>
             <h3>Boxplot:</h3><br>
