added titles to icon buttons

--- a/public/404.html
+++ b/public/404.html
@@ -10,7 +10,7 @@
         <div class="centeredDiv">
             <h2>404 - Page not Found</h2>
             <h3>This page could not be found</h3>
-            <button type="button" name="homeButton" class="iconButton" onclick="location.href='/'"><i class="icon material-icons">home</i></button>
+            <button type="button" name="homeButton" class="iconButton" title="home" onclick="location.href='/'"><i class="icon material-icons">home</i></button>
         </div>
     </body>
 </html>
