--- a/public/account.html
+++ b/public/account.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
     <body onload="setUp()">
-        <button type="button" name="homeButton" class="iconButton" onclick="location.href='main'"><i class="icon material-icons">home</i></button>
+        <button type="button" name="homeButton" class="iconButton" title="home" onclick="location.href='main'"><i class="icon material-icons">home</i></button>
         <div class="centeredDiv boxedDiv">
             <h1>Your account</h1>
             <h3>Username:</h3><h3 id="usernameText"></h3><br>
