--- a/public/analyze.html
+++ b/public/analyze.html
@@ -8,7 +8,7 @@
         <script src="https://d3js.org/d3.v5.min.js"></script>
     </head>
     <body onload="initialAnalysis()">
-        <button type="button" name="homeButton" class="iconButton" onclick="location.href='main'"><i class="icon material-icons">home</i></button>
+        <button type="button" name="homeButton" class="iconButton" title="home" onclick="location.href='main'"><i class="icon material-icons">home</i></button>
         <div class="centeredDiv boxedDiv">
             <h1>Analysis</h1>
             <h3>Number of ratings: </h3><h3 id="amountText"></h3><br>
