--- a/public/main.html
+++ b/public/main.html
@@ -8,9 +8,9 @@
     </head>
     <body onload="setTexts()">
         <div class="buttonDiv">
-            <button type-"button" class="iconButton" name="analysisButton" onclick="location.href='/analyze'"><i class="icon material-icons">assessment</i></button>
-            <button type-"button" class="iconButton" name="accountButton" onclick="location.href='/account'"><i class="icon material-icons">account_circle</i></button>
-            <button type="button" class="iconButton" name="logoutButton" onclick="logout()"><i class="icon material-icons">exit_to_app</i></button>
+            <button type-"button" class="iconButton" name="analysisButton" title="analysis" onclick="location.href='/analyze'"><i class="icon material-icons">assessment</i></button>
+            <button type-"button" class="iconButton" name="accountButton" title="account" onclick="location.href='/account'"><i class="icon material-icons">account_circle</i></button>
+            <button type="button" class="iconButton" name="logoutButton" title="logout" onclick="logout()"><i class="icon material-icons">exit_to_app</i></button>
         </div>
 
         <div class="centeredDiv">
