--- a/public/register.html
+++ b/public/register.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
     <body>
-        <button type="button" name="homeButton" class="iconButton" onclick="location.href='/'"><i class="icon material-icons">home</i></button>
+        <button type="button" name="homeButton" class="iconButton" title="home" onclick="location.href='/'"><i class="icon material-icons">home</i></button>
         <div class="centeredDiv">
             <h1>Register</h1><br>
             <input type="text" class="logInput" id="username" name="username", placeholder="Username"><br>
