main page now supports any selected date rather than only today

--- a/public/main.html
+++ b/public/main.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="/css/general.css", type="text/css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
-    <body onload="setTexts()">
+    <body onload="setUpPage()">
         <div class="buttonDiv">
             <button type-"button" class="iconButton" name="analysisButton" title="analysis" onclick="location.href='/analyze'"><i class="icon material-icons">assessment</i></button>
             <button type-"button" class="iconButton" name="accountButton" title="account" onclick="location.href='/account'"><i class="icon material-icons">account_circle</i></button>
