--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,20 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>DayRate</title>
-        <link rel="stylesheet" href="/css/general.css", type="text/css">
+        <title>Dayrate</title>
+        <link rel="stylesheet" href="/css/general.css" type="text/css">
     </head>
     <body>
         <div class="centeredDiv">
-            <h1 class="titleText">Welcome to DayRate</h1><br>
+            <h1 class="title">Dayrate</h1><br>
             <button type="button" class="generalButton" name="loginButton" onclick="location.href='/login'">Login</button>
+            <button type="button" class="generalButton" name="registerButton" onclick="location.href='/register'">Register</button>
+            <p>Dayrate is a site that allows you to give ratings to each day and provides advanced visualization of your ratings.
+                This was made as a summertime project to practice with node.js and web development.</p>
+            <div class="footer">
+                <p>Made by Bart van der Steenhoven - 2020 <br>
+                I don't think any rights are reserved</P>
+            </div>
         </div>
     </body>
 </html>
