--- a/public/404.html
+++ b/public/404.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>404 - Not Found</title>
-        <link rel="stylesheet" href="/css/general.css", type="text/css">
+        <link rel="stylesheet" href="/css/general.css" type="text/css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
     <body>
