--- a/public/analyze.html
+++ b/public/analyze.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title>Analyze</title>
-        <link rel="stylesheet" href="/css/general.css", type="text/css">
+        <link rel="stylesheet" href="/css/general.css" type="text/css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <script src="https://d3js.org/d3.v5.min.js"></script>
+        <script src="js/analyze.js"></script>
     </head>
     <body onload="initialAnalysis()">
         <button type="button" name="homeButton" class="iconButton" title="home" onclick="location.href='main'"><i class="icon material-icons">home</i></button>
@@ -27,5 +28,4 @@
             <svg id="averageDaySvg" width="550" height="500"></svg>
         </div>
     </body>
-    <script src="js/analyze.js"></script>
 </html>
