--- a/public/login.html
+++ b/public/login.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>Login</title>
-        <link rel="stylesheet" href="/css/general.css", type="text/css">
+        <link rel="stylesheet" href="/css/general.css" type="text/css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
     <body>
         <button type="button" name="homeButton" class="iconButton" title="home" onclick="location.href='/'"><i class="icon material-icons">home</i></button>
         <div class="centeredDiv">
             <h1>Login</h1><br>
-            <input type="text" class="logInput" id="username" name="username", placeholder="username"><br>
+            <input type="text" class="logInput" id="username" name="username" placeholder="username"><br>
             <input type="password" class="logInput" id="password" name="password" placeholder="password"><br>
             <button class="generalButton" type="button" name="loginButton" id="loginButton">Login</button><br>
             <a href="/register">Click here to register</a>
