--- a/public/main.html
+++ b/public/main.html
@@ -3,13 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>Main</title>
-        <link rel="stylesheet" href="/css/general.css", type="text/css">
+        <link rel="stylesheet" href="/css/general.css" type="text/css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="js/main.js" defer></script>
     </head>
     <body onload="setUpPage()">
         <div class="buttonDiv">
-            <button type-"button" class="iconButton" name="analysisButton" title="analysis" onclick="location.href='/analyze'"><i class="icon material-icons">assessment</i></button>
-            <button type-"button" class="iconButton" name="accountButton" title="account" onclick="location.href='/account'"><i class="icon material-icons">account_circle</i></button>
+            <button type="button" class="iconButton" name="analysisButton" title="analysis" onclick="location.href='/analyze'"><i class="icon material-icons">assessment</i></button>
+            <button type="button" class="iconButton" name="accountButton" title="account" onclick="location.href='/account'"><i class="icon material-icons">account_circle</i></button>
             <button type="button" class="iconButton" name="logoutButton" title="logout" onclick="logout()"><i class="icon material-icons">exit_to_app</i></button>
         </div>
 
@@ -43,6 +45,4 @@
             <h2 id="dateRateText"></h2>
         </div>
     </body>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="js/main.js"></script>
 </html>
