--- a/public/register.html
+++ b/public/register.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>Register</title>
-        <link rel="stylesheet" href="/css/general.css", type="text/css">
+        <link rel="stylesheet" href="/css/general.css" type="text/css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
     <body>
         <button type="button" name="homeButton" class="iconButton" title="home" onclick="location.href='/'"><i class="icon material-icons">home</i></button>
         <div class="centeredDiv">
             <h1>Register</h1><br>
-            <input type="text" class="logInput" id="username" name="username", placeholder="Username"><br>
+            <input type="text" class="logInput" id="username" name="username" placeholder="Username"><br>
             <input type="password" class="logInput" id="password" name="password" placeholder="Password"><br>
             <input type="password" class="logInput" id="password2" name="password2" placeholder="Confirm password"><br>
             <button class="generalButton" type="button" name="registerButton" id="registerButton">Register</button><br>
