--- a/public/account.html
+++ b/public/account.html
@@ -11,7 +11,6 @@
         <div class="centeredDiv boxedDiv">
             <h1>Your account</h1>
             <h3>Username:</h3><h3 id="usernameText"></h3><br>
-            <h3>Email:</h3><h3 id="emailText"></h3><br>
             <h3>Password:</h3>
             <button type="button" class='generalButton' name="showChangePwButton" id="showChangePwButton" onclick="togglePwDiv()">Change password</button><br>
             <div class="nestedDiv initHidden", id="passwordDiv">
@@ -32,7 +31,7 @@
             <div class='nestedDiv initHidden' id='exportDiv'>
                 <button type="button" class="smallButton" name="downloadRatingsButton" id="downloadRatingsButton" onclick="downloadRatings()">Download ratings</button>
             </div>
-            <h3>Delete Account</h3><br>
+            <h3>Delete Account</h3>
             <button type="button" class="generalButton" name="showDelButton" id="showDelButton" onclick="toggleDelDiv()">Delete Account</button>
             <div class="nestedDiv initHidden" id="delDiv">
                 <input type="password" class="logInput" name="delPw" id="delPw" placeholder="Password"><br>
