some visual button stuff

--- a/public/account.html
+++ b/public/account.html
@@ -35,7 +35,7 @@
             <button type="button" class="generalButton" name="showDelButton" id="showDelButton" onclick="toggleDelDiv()">Delete Account</button>
             <div class="nestedDiv initHidden" id="delDiv">
                 <input type="password" class="logInput" name="delPw" id="delPw" placeholder="Password"><br>
-                <button type="button" class="smallButton" name="delButton" id="delButton" onclick="deleteAccount()">Delete Account</button>
+                <button type="button" class="smallButton seriousButton" name="delButton" id="delButton" onclick="deleteAccount()">Delete Account</button>
             </div>
         </div>
     </body>
