--- a/public/analyze.html
+++ b/public/analyze.html
@@ -13,12 +13,12 @@
         <button type="button" name="homeButton" class="iconButton" title="home" onclick="location.href='main'"><i class="icon material-icons">home</i></button>
         <div class="centeredDiv boxedDiv">
             <h1>Analysis</h1><br>
-            <button type="button" class="periodButton" name="allTimeButton" id="allTimeButton">All time</button>
-            <button type="button" class="periodButton" name="yearButton" id="yearButton">This year</button>
-            <button type="button" class="periodButton" name="monthButton" id="monthButton">This month</button>
+            <button type="button" class="periodButton leftRound" name="allTimeButton" id="allTimeButton">All time</button><!--
+            --><button type="button" class="periodButton" name="yearButton" id="yearButton">This year</button><!--
+            --><button type="button" class="periodButton rightRound" name="monthButton" id="monthButton">This month</button>
             <h3>Number of ratings: </h3><h3 id="amountText"></h3><br>
             <h3>Average rating: </h3><h3 id="averageText"></h3><br>
-            <h3>Ratings</h3><br>
+            <h3>Ratings:</h3><br>
             <div class='nestedDiv scrollDiv'>
                 <ul class="noPointsList" id="ratingsList"></ul>
             </div>
