--- a/public/login.html
+++ b/public/login.html
@@ -10,8 +10,8 @@
         <button type="button" name="homeButton" class="iconButton" title="home" onclick="location.href='/'"><i class="icon material-icons">home</i></button>
         <div class="centeredDiv">
             <h1>Login</h1><br>
-            <input type="text" class="logInput" id="username" name="username" placeholder="username"><br>
-            <input type="password" class="logInput" id="password" name="password" placeholder="password"><br>
+            <input type="text" class="logInput" id="username" name="username" placeholder="Username"><br>
+            <input type="password" class="logInput" id="password" name="password" placeholder="Password"><br>
             <button class="generalButton" type="button" name="loginButton" id="loginButton">Login</button><br>
             <a href="/register">Click here to register</a>
       </div>
