--- a/public/main.html
+++ b/public/main.html
@@ -38,7 +38,7 @@
             </div>
             <div class="initHidden" id="isRatedDiv">
                 <h2 class="scoreText">You gave today a</h2> <h2 class="scoreText" id="scoreText"></h2><br>
-                <button type="button" class="smallButton" name="removeButton" id="removeButton">Remove rating</button>
+                <button type="button" class="smallButton seriousButton" name="removeButton" id="removeButton">Remove rating</button>
             </div>
             <input type="date" name="dateGiver" id="dateGiver">
             <button type="button" class="smallButton" name="getRateButton" id="getRateButton">Retrieve</button>
